parser/MiniJava.java
/* Generated By:JavaCC: Do not edit this line. MiniJava.java */
package parser;

import java.util.List;
import java.util.ArrayList;
import java.io.File;
import java.io.FileNotFoundException;
import java.io.FileReader;
import main.Scan;
import syntax.*;

/** Simple brace matcher. */
public class MiniJava implements MiniJavaConstants {

        private static int errors = 0;
        private static File file;

        public static Program parseFile(File f) {
                file = f;
                try {
                        FileReader reader = new FileReader(file);

                        MiniJava parser = new MiniJava(reader);
                        if (Scan.isVerbose())
                                parser.enable_tracing();
                        else
                                parser.disable_tracing();
                        Program p = parser.Input();
                        return p;
                } catch(ParseException e) {
                        Scan.logError("An unrecoverable error occured in parsing.");
                } catch (FileNotFoundException e) { }
                return null;
        }

        public static void addError() {
                errors += 1;
        }

        public static int errorCount() {
                return errors;
        }

/** Root production. */
  static final public Program Input() throws ParseException {
                    MainClass m; ClassDecl c; List<ClassDecl> cl = new ArrayList<ClassDecl>();
    try {
      m = MainClass();
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CLASS:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        c = ClassDeclaration();
                                                      cl.add(c);
      }
      jj_consume_token(0);
                  {if (true) return new Program(m,cl);}
    } catch (ParseException e) {
                error(e);
    }
          {if (true) return null;}
    throw new Error("Missing return statement in function");
  }

  static final public MainClass MainClass() throws ParseException {
                          Identifier c; MainClass m;
    try {
      jj_consume_token(CLASS);
      c = Identifier();
      jj_consume_token(OB);
      m = MainFunction(c);
      jj_consume_token(CB);
                   {if (true) return m;}
    } catch (ParseException e) {
                String next = error(e);
                switch(next) {
                        case "<INVALID>":
                                break;
                        case "}":
                                break;
                        case "class":
                                skip_to(OB,-1);
                                skip_to(CB,OB);
                                break;
                        case "<IDENTIFIER>":
                                skip_to(OB,-1);
                                skip_to(CB,OB);
                                break;
                        default:
                                skip_to(CB,OB);
                                break;
                }
    }
          {if (true) return null;}
    throw new Error("Missing return statement in function");
  }

  static final public MainClass MainFunction(Identifier c) throws ParseException {
                                         Identifier f; Statement s;
    try {
      jj_consume_token(PUBLIC);
      jj_consume_token(STATIC);
      jj_consume_token(VOID);
      jj_consume_token(__main__);
      jj_consume_token(OP);
      jj_consume_token(__stringa__);
      f = Identifier();
      jj_consume_token(CP);
      jj_consume_token(OB);
      s = Statement();
      jj_consume_token(CB);
                  {if (true) return new MainClass(c,f,s);}
    } catch (ParseException e) {
                String next = error(e);
                if(next.equals("<INVALID>") || next.equals("public") || next.equals("static") || next.equals("void")
                         || next.equals("main") || next.equals("(") || next.equals("String[]") || next.equals("<IDENTIFIER>")
                         || next.equals(")")
                ) {
                        skip_to(OB,-1);
                        skip_to(CB,OB);
                } else if(next.equals("}")) {

                } else {
                        skip_to(CB,OB);
                }
    }
          {if (true) return null;}
    throw new Error("Missing return statement in function");
  }

  static final public ClassDecl ClassDeclaration() throws ParseException {
        Identifier ci,ei=null; FieldDecl fd; MethodDecl md;
        List<FieldDecl> fl = new ArrayList<FieldDecl>();
        List<MethodDecl> ml = new ArrayList<MethodDecl>();
    try {
      jj_consume_token(CLASS);
      ci = Identifier();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EXTENDS:
        jj_consume_token(EXTENDS);
        ei = Identifier();
        break;
      default:
        jj_la1[1] = jj_gen;
        ;
      }
      jj_consume_token(OB);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INT:
        case INTA:
        case BOOLEAN:
        case VOID:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        fd = VarDeclarationField();
                                                                                                        fl.add(fd);
      }
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PUBLIC:
          ;
          break;
        default:
          jj_la1[3] = jj_gen;
          break label_3;
        }
        md = MethodDeclaration();
                                                                                                                                                    ml.add(md);
      }
      jj_consume_token(CB);
                        if(ei == null)
                                {if (true) return new SimpleClassDecl(ci,fl,ml);}
                        else
                                {if (true) return new ExtendingClassDecl(ci,ei,fl,ml);}
    } catch (ParseException e) {
                String next = error(e);
                switch(next) {
                        case "<INVALID>":
                                break;
                        case "}":
                                break;
                        case "class":
                                skip_to(OB,-1);
                                skip_to(CB,OB);
                                break;
                        case "<IDENTIFIER>":
                                skip_to(OB,-1);
                                skip_to(CB,OB);
                                break;
                        default:
                                skip_to(CB,OB);
                                break;
                }
    }
          {if (true) return null;}
    throw new Error("Missing return statement in function");
  }

  static final public MethodDecl MethodDeclaration() throws ParseException {
        Type nt,tt;
    Identifier mi,ti;
    List <FormalDecl> fl = new ArrayList<FormalDecl>();
    List <LocalDecl> ll = new ArrayList<LocalDecl>();
    LocalDecl tld;
    List <Statement> sl = new ArrayList<Statement>();
    Statement ts;
    Expression ex;
    try {
      jj_consume_token(PUBLIC);
      nt = Type();
      mi = Identifier();
      jj_consume_token(OP);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case INTA:
      case BOOLEAN:
      case VOID:
      case IDENTIFIER:
        tt = Type();
        ti = Identifier();
                                                          fl.add(new FormalDecl(tt,ti));
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case CM:
            ;
            break;
          default:
            jj_la1[4] = jj_gen;
            break label_4;
          }
          jj_consume_token(CM);
          tt = Type();
          ti = Identifier();
                                                                                                                             fl.add(new FormalDecl(tt,ti));
        }
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
      jj_consume_token(CP);
      jj_consume_token(OB);
      label_5:
      while (true) {
        if (jj_2_1(2)) {
          ;
        } else {
          break label_5;
        }
        tld = VarDeclarationLocal();
                                                                       ll.add(tld);
      }
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case OB:
        case IF:
        case WHILE:
        case IDENTIFIER:
        case 47:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_6;
        }
        ts = Statement();
                                                                                                            sl.add(ts);
      }
      jj_consume_token(RETURN);
      ex = Expression();
      jj_consume_token(SEMICOLON);
      jj_consume_token(CB);
                  {if (true) return new MethodDecl(nt,mi,fl,ll,sl,ex);}
    } catch (ParseException e) {
                String next = error(e);
                if(next.equals("<INVALID>") || next.equals("public") || next.equals("static") || next.equals("<TYPE>")
                         || next.equals("main") || next.equals("(") || next.equals("String[]") || next.equals("<IDENTIFIER>")
                         || next.equals(")")
                ) {
                        skip_to(OB,-1);
                        skip_to(CB,OB);
                } else if(next.equals("}")) {

                } else {
                        skip_to(CB,OB);
                }
    }
          {if (true) return null;}
    throw new Error("Missing return statement in function");
  }

  static final public Statement Statement() throws ParseException {
                          Statement s; Identifier i;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OB:
        jj_consume_token(OB);
        s = BlockStatement();
                                                                                  {if (true) return s;}
        break;
      case IF:
        jj_consume_token(IF);
        s = IfStatement();
                                                                                  {if (true) return s;}
        break;
      case WHILE:
        jj_consume_token(WHILE);
        s = WhileStatement();
                                                                          {if (true) return s;}
        break;
      case 47:
        jj_consume_token(47);
        s = PrintStatement();
                                                                  {if (true) return s;}
        break;
      case IDENTIFIER:
        i = Identifier();
        s = AssignStatement(i);
                                                                  {if (true) return s;}
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException e) {
                String next = error(e);
    }
          {if (true) return null;}
    throw new Error("Missing return statement in function");
  }

  static final public Statement BlockStatement() throws ParseException {
                               Statement s; List<Statement> sl = new ArrayList<Statement>();
    try {
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case OB:
        case IF:
        case WHILE:
        case IDENTIFIER:
        case 47:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_7;
        }
        s = Statement();
                                 sl.add(s);
      }
      jj_consume_token(CB);
                                                       {if (true) return new Block(sl);}
    } catch (ParseException e) {
                String next = error(e);
                switch(next) {
                        case "}":
                                break;
                        default:
                                skip_to(CP,-1);
                                break;
                }
    }
          {if (true) return null;}
    throw new Error("Missing return statement in function");
  }

  static final public Statement IfStatement() throws ParseException {
                            Expression ex; Statement s1,s2;
    try {
      jj_consume_token(OP);
      ex = Expression();
      jj_consume_token(CP);
      s1 = Statement();
      jj_consume_token(ELSE);
      s2 = Statement();
                                                                               {if (true) return new If(token.beginLine,token.beginColumn,ex,s1,s2);}
    } catch (ParseException e) {
                String next = error(e);
                if(!next.equals("else"))
                        skip_to(ELSE,-1);
    }
          {if (true) return null;}
    throw new Error("Missing return statement in function");
  }

  static final public Statement WhileStatement() throws ParseException {
                               Expression ex; Statement s;
    try {
      jj_consume_token(OP);
      ex = Expression();
      jj_consume_token(CP);
      s = Statement();
                                                        {if (true) return new While(token.beginLine,token.beginColumn,ex,s);}
    } catch (ParseException e) {
                String next = error(e);
                if(!next.equals(")"))
                        skip_to(ELSE,-1);
    }
          {if (true) return null;}
    throw new Error("Missing return statement in function");
  }

  static final public Statement PrintStatement() throws ParseException {
                               Expression ex;
    try {
      jj_consume_token(OP);
      ex = Expression();
      jj_consume_token(CP);
      jj_consume_token(SEMICOLON);
                                              {if (true) return new Print(token.beginLine,token.beginColumn,ex);}
    } catch (ParseException e) {
                String next = error(e);
                if(!next.equals(";"))
                        skip_to(SEMICOLON,-1);
    }
          {if (true) return null;}
    throw new Error("Missing return statement in function");
  }

  static final public Statement AssignStatement(Identifier i) throws ParseException {
                                            Expression ex1,ex2;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQL:
        jj_consume_token(EQL);
        ex1 = Expression();
        jj_consume_token(SEMICOLON);
                                             {if (true) return new Assign(token.beginLine,token.beginColumn,i,ex1);}
        break;
      case OS:
        jj_consume_token(OS);
        ex1 = Expression();
        jj_consume_token(CS);
        jj_consume_token(EQL);
        ex2 = Expression();
        jj_consume_token(SEMICOLON);
                                                                      {if (true) return new ArrayAssign(token.beginLine,token.beginColumn,i,ex1,ex2);}
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException e) {
                String next = error(e);
                if(!next.equals(";"))
                        skip_to(SEMICOLON,-1);
    }
          {if (true) return null;}
    throw new Error("Missing return statement in function");
  }

  static final public Identifier Identifier() throws ParseException {
                            Token t;
    t = jj_consume_token(IDENTIFIER);
          {if (true) return new Identifier(token.beginLine, token.beginColumn, t.toString());}
    throw new Error("Missing return statement in function");
  }

  static final public FieldDecl VarDeclarationField() throws ParseException {
                                    Type t; Identifier i;
    try {
      t = Type();
      i = Identifier();
      jj_consume_token(SEMICOLON);
                                              {if (true) return new FieldDecl(t,i);}
    } catch (ParseException e) {
                String next = error(e);
                if(!next.equals(";"))
                        skip_to(SEMICOLON,-1);
    }
          {if (true) return null;}
    throw new Error("Missing return statement in function");
  }

  static final public LocalDecl VarDeclarationLocal() throws ParseException {
                                    Type t; Identifier i;
    try {
      t = Type();
      i = Identifier();
      jj_consume_token(SEMICOLON);
                                              {if (true) return new LocalDecl(t,i);}
    } catch (ParseException e) {
                String next = error(e);
                if(!next.equals(";"))
                        skip_to(SEMICOLON,-1);
    }
          {if (true) return null;}
    throw new Error("Missing return statement in function");
  }

  static final public Type Type() throws ParseException {
                Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTA:
        jj_consume_token(INTA);
                                          {if (true) return syntax.Type.THE_INT_ARRAY_TYPE;}
        break;
      case INT:
        jj_consume_token(INT);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case OS:
          jj_consume_token(OS);
          jj_consume_token(CS);
                                  {if (true) return syntax.Type.THE_INT_ARRAY_TYPE;}
          break;
        default:
          jj_la1[10] = jj_gen;

                                          {if (true) return syntax.Type.THE_INTEGER_TYPE;}
        }
        break;
      case BOOLEAN:
        jj_consume_token(BOOLEAN);
                                  {if (true) return syntax.Type.THE_BOOLEAN_TYPE;}
        break;
      case VOID:
        jj_consume_token(VOID);
                                          {if (true) return syntax.Type.THE_VOID_TYPE;}
        break;
      case IDENTIFIER:
        t = jj_consume_token(IDENTIFIER);
                                   {if (true) return new IdentifierType(t.beginLine,t.beginColumn,t.toString());}
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException e) {
                String next = error(e);
                switch(next) {
                        case "<IDENTIFIER>":
                                break;
                        default:
                                skip_to(IDENTIFIER,-1);
                                break;
                }
    }
          {if (true) return null;}
    throw new Error("Missing return statement in function");
  }

  static final public Expression Expression() throws ParseException {
                            Expression ex1,ex2;
    try {
      ex1 = BasicExpression();
      ex2 = LoopExpression(ex1);
                                                                {if (true) return ex2;}
    } catch (ParseException e) {
                String next = error(e);
    }
          {if (true) return null;}
    throw new Error("Missing return statement in function");
  }
